bk_ida/gccida/c1/lex_number
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1353:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1354:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1355:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v60; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1364:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v69; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1365:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v70; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1396:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v6] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1398:14: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v5 = 2 * ( ( sch_istable[v6] & 4) == 0) + 8; 
             ^~~~~~~~~~~
             _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1437:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v14] & 4) != 0 || ( sch_istable[v14] & 0x100) != 0 && v5 == 16 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1437:40: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v14] & 4) != 0 || ( sch_istable[v14] & 0x100) != 0 && v5 == 16 ) 
                                       ^~~~~~~~~~~
                                       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1439:7: error: use of undeclared identifier 'hex_value'; did you mean '_hex_value'?
v15 = hex_value[v14]; 
      ^~~~~~~~~
      _hex_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/libiberty.h:251:19: note: '_hex_value' declared here
extern const char _hex_value[_hex_array_size];
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1524:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v32] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1533:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v32] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1539:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v32] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1542:11: error: 'const char *' and 'uint8 *' (aka 'unsigned char *') are not pointers to compatible types
v49 = v12 - ( _BYTE *)src; 
      ~~~ ^ ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1543:31: error: 'const char *' and 'uint8 *' (aka 'unsigned char *') are not pointers to compatible types
v3 = ( __int64)&v72 - ( ( v12 - ( _BYTE *)src + 16) & 0xFFFFFFFFFFFFFFF0LL); 
                          ~~~ ^ ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1545:31: error: 'const char *' and 'uint8 *' (aka 'unsigned char *') are not pointers to compatible types
memcpy( ( void *)v3, src, v12 - ( _BYTE *)src); 
                          ~~~ ^ ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1911:15: error: use of undeclared identifier 'unk_60D418'
v38 = ( tree)&unk_60D418; 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1915:15: error: use of undeclared identifier 'unk_60D428'
v38 = ( tree)&unk_60D428; 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/c-lex.c:1937:20: error: expected expression
v69 = ( tree_node *)*( &global_trees + 11); 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lex_number/src/obj/c-lex.o] Error 1
